--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "bu bizni birinchi loyxamiz",
   "main": "server.js",
   "scripts": {
-    
     "start": "node server.js",
-    "dev":"nodemon  server.js",
-    "train":"nodemon train.js",
+    "dev": "nodemon  server.js",
+    "train": "nodemon train.js",
+    "psw": "nodemon author.ejs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Muhammad",
