--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "expres": "^0.0.5",
     "express": "^4.21.2",
+    "mongodb": "^3.2.6",
     "nodemon": "^3.1.9"
   }
 }
