--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Muhammad",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.2",
     "ejs": "^3.1.10",
     "expres": "^0.0.5",
     "express": "^4.21.2",
